--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -21,11 +28,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".QrScannerActivity"/>
         <activity android:name=".SignupActivity" />
         <activity android:name=".DashboardActivity" />
         <activity android:name=".TaskManagerActivity" />
         <activity android:name=".ExpenseTrackerActivity" />
+        <activity android:name=".WeatherActivity" />
+        <activity android:name=".NewsFeedActivity" />
         <activity android:name=".BMICalculatorActivity"/>
+        <activity android:name=".FlashlightActivity"/>
 
     </application>
 
